@@ -1,5 +1,7 @@
 Revision history for Async-Methods
 
+  - Inline Mojo::Promise::Role::Get logic
+
 0.000002 - 2020-04-18
   - Add tests, fix bugs, write docs
 
